# StreamCapEvo

./: .env.example  .gitignore  AGENTS.md  COOKIE_IMPORT_README.md  README.md  README_EN.md  build_qt_nuitka.bat  docker-compose.yml  main_qt.py  package_windows_installer.bat  pyproject.toml  requirements.txt  test_config_manager_user_data.py  test_data_migration.py  test_diagnostics.py  test_predictor_metrics.py
.github/ISSUE_TEMPLATE/: bug.yml  bug_en.yml  feature.yml  feature_en.yml  question.yml  question_en.yml
app/: event_bus.py  qt_app_manager.py
app/core/config/: config_manager.py  language_manager.py
app/core/data_import/: __init__.py  import_engine.py  migration.py
app/core/recording/: history_manager.py  precog.py  predictor_metrics.py  record_manager.py  recording_state_logic.py  stream_manager.py
app/core/update/: update_checker.py
app/messages/: desktop_notify.py
app/models/recording/: recording_model.py
app/qt/: __init__.py  main_window.py
app/qt/components/: add_stream_dialog.py  confirm_dialog.py  recording_card.py  (+4 more)
app/utils/: diagnostics.py  utils.py
config/: version.json
docs/: INTELLIGENCE_ES.md  PRECOG_EXPLORATION_ES.md  PRECOG_PLAN_ES.md
installer/: StreamCap.iss
locales/: en.json  es.json
openspec/: config.yaml
scripts/: bump_version.py  predictor_metrics_report.py
tests/: __init__.py  test_history_manager_forecast.py  test_main_window_shutdown.py  test_precog.py  test_record_manager_precog.py  test_recording_card_badge.py  test_recording_model_to_dict.py  test_recordings_view_precog.py  test_save_config_temp_diag.py
(+16 files in other folders)
