[project]
name = "StreamCapEvo"
version = "1.1.1"
description = "Live Stream Recorder"
authors = [{ name = "GinesP" }]
license = {text = "Apache-2.0"}
readme = "README.md"
url='https://github.com/GinesP/StreamCapEvo'
requires-python = ">=3.10,<4.0"

dependencies = [
    "PySide6>=6.6.0",
    "qasync>=0.27.0",
    "httpx[http2]>=0.28.1",
    "screeninfo>=0.8.1",
    "aiofiles>=24.1.0",
    "aiosqlite>=0.20.0",
    "streamget>=4.0.8",
    "python-dotenv>=1.0.1",
    "psutil>=7.0.0",
    "cachetools>=5.5.2",
    "pystray>=0.19.5",
    "plyer>=2.1.0"
]

[project.urls]
Documentation = "https://github.com/GinesP/StreamCapEvo/wiki"
Homepage = "https://github.com/GinesP/StreamCapEvo"
Source = "https://github.com/GinesP/StreamCapEvo"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.poetry]
package-mode = false
packages = [
    { include = "app", from = "." },
]

[tool.poetry.dependencies]
PySide6 = ">=6.6.0"
qasync = ">=0.27.0"
httpx = "^0.28.1"
screeninfo = "~0.8.1"
aiofiles = "~24.1.0"
aiosqlite = ">=0.22.1"
streamget = ">=4.0.8"
python-dotenv = "~1.1.0"
psutil = ">=7.0.0"
cachetools = "~5.5.2"
pystray = "~0.19.5"
plyer = "~2.1.0"


[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "~0.13.2"
